Possible fix for Firefox layout bug

--- a/AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-main-nav/records-main-nav.component.css
+++ b/AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-main-nav/records-main-nav.component.css
@@ -19,7 +19,7 @@
 }
 
 @media screen and (min-width: 900px) {
-  .navigate > div {
+  .return {
     float: none;
   }
 
